monitor/influxDB/influxDB_StatefullSet.yml
---
apiVersion: v1
kind: Namespace
metadata:
    name: data
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: influxdb
    name: influxdb
    namespace: data
spec:
    replicas: 1
    selector:
        matchLabels:
            app: influxdb
    serviceName: influxdb
    template:
        metadata:
            labels:
                app: influxdb
        spec:
            containers:
              - image: influxdb:2.0.6
                name: influxdb
                ports:
                  - containerPort: 8086
                    name: influxdb
                volumeMounts:
                  - mountPath: /var/lib/influxdb2
                    name: data
                resources:
                    limits:
                        memory: "1Gi"
                        cpu: "1000m"
                    requests: 
                        memory: 500M
                        cpu: "500m"                 
    volumeClaimTemplates:
      - metadata:
            name: data
            namespace: data
        spec:
            accessModes:
              - ReadWriteOnce
            resources:
                requests:
                    storage: 10G
            storageClassName: longhorn-retain
---
apiVersion: v1
kind: Service
metadata:
    name: influxdb
    namespace: data
spec:
    ports:
      - name: influxdb
        port: 8086
        targetPort: 8086
    selector:
        app: influxdb
    type: ClusterIP
